ferritin/src/snapshots/ferritin__tests__fuzzy_matching_trait_member_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::test_methid\"),\nOutputMode :: Tty, & get_fixture_crate_path ())"
---
Could not find 'crate::TestTrait::test_methid'

Did you mean:

  ◦ [crate::TestTrait::ASSOCIATED_CONSTANT](https://docs.rs/fixture-crate/0.1.0/fixture-crate/)

  ◦ [crate::TestTrait::T](https://docs.rs/fixture-crate/0.1.0/fixture-crate/)

  ◦ [crate::TestTrait::test_method](https://docs.rs/fixture-crate/0.1.0/fixture-crate/)

  ◦ [crate::TestTrait::process](https://docs.rs/fixture-crate/0.1.0/fixture-crate/)

  ◦ [crate::submodule](https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/index.html)
