ferritin/src/snapshots/ferritin__tests__fuzzy_matching_trait_methods_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestStruct::cute\"), OutputMode\n:: Plain, & get_fixture_crate_path ())"
---
Could not find 'crate::TestStruct::cute'

Did you mean:

  ◦ crate::TestStruct::new

  ◦ crate::TestStruct::increment_count

  ◦ crate::TestStruct::get_field

  ◦ crate::TestStruct::ASSOCIATED_CONST

  ◦ crate::TupleStruct
