ferritin/src/snapshots/ferritin__tests__fuzzy_matching_typo_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestStruct::test_metod\"),\nOutputMode :: Ai, & get_fixture_crate_path ())"
---
Could not find 'crate::TestStruct::test_metod'

Did you mean:

- crate::TestStruct::ASSOCIATED_CONST
- crate::TestStruct::new
- crate::TestStruct::get_field
- crate::TestStruct::increment_count
- crate::submodule
