ferritin/src/snapshots/ferritin__tests__fuzzy_matching_typo_ai_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::get(\"crate::TestStruct::test_metod\"), OutputMode ::\nAi)"
---
Could not find 'crate::TestStruct::test_metod'

Did you mean:

crate::TestStruct::ASSOCIATED_CONST

crate::TestStruct::new

crate::TestStruct::get_field

crate::TestStruct::increment_count

crate::submodule
